kubernetes/influxdb/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app-ingress: ""
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    kubernetes.io/metadata.name: influxdb
    app.kubernetes.io/instance: influxdb
  name: influxdb
