kubernetes/influxdb/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: influxdb
  labels:
    app: influxdb
    app.kubernetes.io/instance: influxdb
spec:
  replicas: 1
  serviceName: influxdb
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
      annotations:
        enable.version-checker.io/influxdb: "true"
        pin-major.version-checker.io/influxdb: "1"
        pin-minor.version-checker.io/influxdb: "8"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60
      serviceAccountName: influxdb-sa
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        # fsGroup: 18086
        # runAsGroup: 18086
        # runAsUser: 18086
      containers:
        - livenessProbe:
            httpGet:
              path: /ping
              port: 8086
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: 8086
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 1
          resources:
            requests:
              memory: "1Gi"
              cpu: "50m"
            limits:
              memory: "5Gi"
              cpu: "750m"
          securityContext:
            # runAsGroup: 18086
            # runAsUser: 18086
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - all
          image: influxdb:1.8.10
          imagePullPolicy: IfNotPresent
          name: influxdb
          ports:
            - containerPort: 2003
            - containerPort: 8086
          volumeMounts:
            - mountPath: /var/lib/influxdb
              name: influxdb-pvc
      hostname: influxdb
      restartPolicy: Always
      volumes:
        - name: influxdb-pvc
          persistentVolumeClaim:
            claimName: influxdb-pvc
