kubernetes/influxdb/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: influxdb
  labels:
    app: influxdb
    app.kubernetes.io/instance: influxdb
  name: influxdb
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: "2003"
      port: 2003
      targetPort: 2003
    - name: "8086"
      port: 8086
      targetPort: 8086
  selector:
    app: influxdb
